[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source =["jsonschema_path"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.mypy]
files = "jsonschema_path"
strict = true

[[tool.mypy.overrides]]
module = "jsonschema_specifications"
ignore_missing_imports = true

[tool.poetry]
name = "jsonschema-path"
version = "0.4.2"
description = "JSONSchema Spec with object-oriented paths"
authors = ["Artur Maciag <maciag.artur@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/p1c2u/jsonschema-path"
keywords = ["jsonschema", "swagger", "spec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
pathable = "^0.5.0"
python = ">=3.10,<4.0.0"
PyYAML = ">=5.1"
requests = {version = "^2.31.0", optional = true}
referencing = "<0.38.0"

[tool.poetry.group.dev.dependencies]
tbump = "^6.11.0"
pre-commit = "*"
pytest = "^8.2.1"
pytest-flake8 = "=1.3.0"
pytest-cov = ">=5,<7"
isort = ">=5.13.2,<7.0.0"
black = ">=25.1,<27.0"
flynt = "1.0.6"
mypy = "^1.14.1"
types-PyYAML = "^6.0.12"
types-requests = "^2.31.0"
responses = "^0.25.0"
deptry = ">=0.19.1,<0.24.0"
pyflakes = ">=2.5,<4.0"
ipdb = "^0.13.13"

[tool.poetry.extras]
requests = ["requests"]

[tool.pytest.ini_options]
addopts = """
--capture=no
--verbose
--showlocals
--junitxml=reports/junit.xml
--cov=jsonschema_path
--cov-report=term-missing
--cov-report=xml
"""

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true

[tool.tbump]

[tool.tbump.git]
message_template = "Version {new_version}"
tag_template = "{new_version}"

[tool.tbump.version]
current = "0.4.2"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<prerelease>[a-z]+\d+)?
'''

[[tool.tbump.file]]
src = "jsonschema_path/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'
